Fix events on mobile for EVideos

--- a/public/vishEditor/stylesheets/all/styles.css
+++ b/public/vishEditor/stylesheets/all/styles.css
@@ -1666,6 +1666,7 @@ span.evideoTimeSlash, span.evideoDuration {
 }
 
 .evideoControlButtonWrapper {
+	position: relative;
 	height: 100%;
 	float: left;
 	display: block;
